# mlops-comment-moderation

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: build-and-push.yml
assets/: README.md  evidently_report_summary.md  evidently_text_moderation_ref_vs_changed.html
data/: README.md
docker/: Dockerfile  docker-compose.local.yml  docker-compose.yml
infra/terraform/: iam_ec2_ecr.tf  iam_github_oidc.tf  main.tf  outputs.tf  user_data.sh  variables.tf
notebooks/: EDA_MLOPS.ipynb  FastText__NN.ipynb  augment_data_nltk.py  augment_data_textattack.py  bert_evaluation.ipynb  data_prep.ipynb  distilbert_experiment_gpu.ipynb  evidently_test.ipynb  flaml_automl.ipynb  manual_baselines.ipynb
src/api/: config.py  inference.py  main.py  models.py
src/monitoring/: augment_data_nltk.py  augment_data_noise.py  augment_data_textattack.py  eval_and_monitor_text.py
src/train/: s3_utils.py  train.py
src/ui/: app.py
