[project]
name = "mlops-comment-moderation"
version = "0.1.0"
description = "Real-time comment moderation pipeline with MLOps, NLP, and AWS deployment"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.39.14",
    "catboost>=1.2.8",
    "evidently>=0.7.11",
    "fastapi>=0.116.1",
    "flaml>=2.3.5",
    "jupyter>=1.1.1",
    "lightgbm>=4.6.0",
    "mlflow>=3.1.4",
    "nltk>=3.9.1",
    "pandas>=2.3.1",
    "pre-commit>=4.2.0",
    "python-dotenv>=1.1.1",
    "ruff>=0.12.5",
    "s3fs>=0.4.2",
    "scikit-learn>=1.7.1",
    "streamlit>=1.48.0",
    "textattack>=0.3.10",
    "torch>=2.7.1",
    "transformers>=4.54.0",
    "uvicorn>=0.35.0",
    "xgboost>=3.0.3",
]
